force-app/main/default/objects/Event_Activity__c/fields/Activity_Description__c.field-meta.xml
<CustomField>
    <fullName>Activity_Description__c</fullName>
    <label>Activity Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>