force-app/main/default/objects/Event_Activity__c/fields/slot__c.field-meta.xml
<CustomField>
    <fullName>slot__c</fullName>
    <label>slot</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
</CustomField>